--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  pinput: ^0.1.10
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.15.0+1
 
 dev_dependencies:
   flutter_test:
@@ -41,8 +44,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -57,9 +60,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-        - family: Montserrat
-          fonts:
-            - asset: fonts/Montserrat-SemiBold.ttf
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-SemiBold.ttf
 
   #         style: italic
   #   - family: Trajan Pro
