--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   pinput: ^0.1.10
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.15.0+1
+  google_maps_flutter: 0.5.21+12
 
 dev_dependencies:
   flutter_test:
