--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.15.0+1
   google_maps_flutter: 0.5.21+12
+  flutter_google_places: 0.2.3
+  google_maps_webservice: 0.0.16
+  location: 2.3.5
+  geocoder: 0.2.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +68,11 @@ flutter:
     - family: Montserrat
       fonts:
         - asset: fonts/Montserrat-SemiBold.ttf
+
+    - family: MontserratLight
+      fonts:
+        - asset: fonts/Montserrat-Medium.ttf
+
 
   #         style: italic
   #   - family: Trajan Pro
