--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_maps_webservice: 0.0.16
   location: 2.3.5
   geocoder: 0.2.1
+  geolocator: ^5.1.5
 
 dev_dependencies:
   flutter_test:
