--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,5 +64,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
