--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   pinput: ^0.1.10
-  firebase_core: ^0.4.0+9
   firebase_auth: ^0.15.0+1
   google_maps_flutter: 0.5.21+12
   flutter_google_places: 0.2.3
@@ -32,6 +31,7 @@ dependencies:
   location: 2.3.5
   geocoder: 0.2.1
   geolocator: ^5.1.5
+  firebase_database: 3.1.1
   provider: 3.2.0
 
 dev_dependencies:
