--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,13 @@ dependencies:
   pinput: ^0.1.10
   firebase_auth: ^0.15.0+1
   google_maps_flutter: 0.5.21+12
-  flutter_google_places: 0.2.3
   google_maps_webservice: 0.0.16
   location: 2.3.5
   geocoder: 0.2.1
   geolocator: ^5.1.5
   firebase_database: 3.1.1
   provider: 3.2.0
+  place_picker: 0.9.11
 
 dev_dependencies:
   flutter_test:
