--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_database: 3.1.1
   provider: 3.2.0
   place_picker: 0.9.11
+  uuid: 2.0.4
 
 dev_dependencies:
   flutter_test:
