--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   provider: 3.2.0
   place_picker: 0.9.11
   uuid: 2.0.4
+  date_picker_timeline : 1.1.3
+  connectivity: 0.4.6+2
 
 dev_dependencies:
   flutter_test:
