--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   uuid: 2.0.4
   date_picker_timeline : 1.1.3
   connectivity: 0.4.6+2
+  numberpicker: 1.1.0
 
 dev_dependencies:
   flutter_test:
