--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,10 +38,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.petrol_pump"
+        applicationId 'com.emilda.ddd'
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode flutterVersionCode.toInteger()
+        versionCode = flutterVersionCode.toInteger()
         versionName flutterVersionName
 
     }
