--- a/ios/Podfile
+++ b/ios/Podfile
@@ -62,6 +62,8 @@ target 'Runner' do
   pod 'Flutter', :path => 'Flutter'
 
   # Plugin Pods
+  pod 'Firebase/Database'
+  pod 'Firebase/Auth'
 
   # Prepare symlinks folder. We use symlinks to avoid having Podfile.lock
   # referring to absolute paths on developers' machines.
